vendor/fixed-macro/tests/compile-fail/exp-too-small.rs
fn main() {
    fixed_macro::fixed!(1.23E-129: I4F4);
}
