vendor/fixed-macro/tests/compile-fail/exp-too-small.stderr
error: invalid fixed value: exponent out of range
 --> $DIR/exp-too-small.rs:2:25
  |
2 |     fixed_macro::fixed!(1.23E-129: I4F4);
  |                         ^^^^^^^^^
